Remove remaining guava collections in `phenol-core` tests